docs(mcp): preserve full client/tool reference while aligning 1.0.1